3DGS name update

--- a/_posts/2025-08-12-3DGS.md
+++ b/_posts/2025-08-12-3DGS.md
@@ -9,7 +9,7 @@ tags:
   - Python
 ---
 
-<!-- This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Try to get to know the core of 3DGS!
 
 Headings are cool
 ======
